--- a/Home.html
+++ b/Home.html
@@ -593,7 +593,7 @@
 
     >>>>>>> 6c0672e20ea85140e959ec2cff85ac22742951d6
 =======
->>>>>>> 469b6c819f786b62a6be610eb7a857ee43ddbf81
+
   </main>
   
 
@@ -604,6 +604,7 @@
         <h3>Đóng Giáng sinh tại quán cà phê kiểu Âu ở Đà Lạt</h3>
         <p>🎅Với tiết trời se lạnh và khung cảnh lãng mạn, Đà Lạt là nơi hẹn hò lý tưởng cho các cặp đôi vào dịp
           lễ cuối năm. Đà Lạt (Lâm Đồng) níu chân du khách... </p>
+          <a href="">Xem thêm</a>
       </div>
       <div class="col-md-6 left">
         <img style="width: inherit ;" src="./img/cà phê.jpg" alt="">
@@ -611,15 +612,20 @@
         <p>Những mô hình vườn cây trải nghiệm không chỉ mang lại nguồn thu nhập cho hộ gia đình mà nó còn góp phần
           vào việc phát triển ngành du lịch của địa phương. Nắm bắt được xu hướng này thì vườn cam Mộc Châu cũng
           đã xuất hiện và thu hút rất đông lượng du khách hàng năm....</p>
+          <a href="">Xem thêm</a>
+
         <img style="width: inherit;" src="./img/đà lạt.jpg" alt="">
         <h3>
           Tổng Hợp Khuyến Mãi Các Khách Sạn Tại Đà Nẵng Nhân Dịp Cuối Năm 2021</h3>
         <p>Tổng Hợp Khuyến Mãi Các Khách Sạn Tại Đà Nẵng Nhân Dịp Cuối Năm 2021 1. KHUYẾN MẠI CUỐI NĂM VỚI NHIỀU
           ƯU ĐÃI TẠI CICILIA ĐÀ NẴNG!...</p>
+          <a href="">Xem thêm</a>
+          
         <img style="width:inherit;" src="./img/bikini.jpg" alt="">
         <h3>Amiana Ưu đãi Đặc biệt – Vịnh Thiên Đường Mời Gọi Giá chỉ từ 1,750,000 VND</h3>
         <p>Trải nghiệm vẻ đẹp bình yên mang đến những phút giây thật sự thư giãn dành riêng cho bạn trong tiết
           trời sang thu đang dần trải dài trên nền cát trắng...</p>
+          <a href="">Xem thêm</a>
       </div>
     </div>
   </div>
