--- a/hotel_detail.html
+++ b/hotel_detail.html
@@ -351,8 +351,8 @@
 =======
       <main class="main">
         <div class="container-fluid">
-          <div class="row"></div>
-           <div class="left col-sm-4">
+          <div class="row">
+           <div class="left col-md-3">
 
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item">
@@ -388,14 +388,29 @@
             </div>
 
            </div>
-           <div class="right col-sm-8">
-            
+           <div class="right col-sm-9">
+             <h1>HAMPTON INN UTICA</h1>
+             <h9 style="color: #0066ff;">172 - 180 North Genesee Str. Utica NY 13502. US.</h6>
+
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./img/ARTS-SAIGONjpg.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./img/EXTENDED.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./img/FAIRFIELD.jpg" class="d-block w-100" alt="...">
+                </div>
+              </div>
+            </div>
            </div>
           </div>   
         </div>
       </main>
-      <div class="fooder_container">
-        <div class="fooder_container">       
+      <div class="footer_container">
+        <div class="footer_container mt-4">       
           <h4>Những chỗ nghỉ phổ biến và tương tự với khách sạn HAMPTON INN UTICA</h4>
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
