update text and search bar

--- a/hotel_detail.html
+++ b/hotel_detail.html
@@ -5,23 +5,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/hotel_detail.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,700&display=swap"
+    rel="stylesheet">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
   <title>tìm kiếm</title>
 </head>
 
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
   <header>
     <?php include "./Header.php" ?>
@@ -75,13 +82,13 @@
 
               Số người
               <div class="select-option">
-              <i class="fas fa-users"></i>
-              <select class="form-select-01 border-0" aria-label="Default select example">
-                <option selected></option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-              </select>
+                <i class="fas fa-users"></i>
+                <select class="form-select-01 border-0" aria-label="Default select example">
+                  <option selected></option>
+                  <option value="1">One</option>
+                  <option value="2">Two</option>
+                  <option value="3">Three</option>
+                </select>
               </div>
               <hr>
 
@@ -117,14 +124,87 @@
                   <img src="./img/FAIRFIELD.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+            <div class="row">
+              <div class="col-md-3 p-0 mt-2 ps-2 ">
+                <img class="anhslide ps-2" src="./img/SOFITELjpg.jpg" alt=" ">
+              </div>
+              <div class="col-md-3 p-0 mt-2 ps-2 ">
+                <img class="anhslide" src="./img/SOFITELjpg.jpg" alt=" ">
+              </div>
+              <div class="col-md-3 p-0 mt-2 ps-2 ">
+                <img class="anhslide" src="./img/SOFITELjpg.jpg" alt=" ">
+              </div>
+              <div class="col-md-3 p-0 mt-2 ps-2 ">
+                <img class="anhslide pe-2" src="./img/SOFITELjpg.jpg" alt=" ">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 bg-white text-secondary p-3">
+                <p>- Welcome to Homewood Suites Syracuse. This modern all-suite hotel offers the perfect home away from
+                  home ideal for short business trips or extended stays in Syracuse NY. We are conveniently situated off
+                  NYS Thruway I-90 in the campus like setting of the Pioneer Business Park providing easy access to all
+                  that the local area has to offer including Syracuse Hancock International Airport just a short 7 miles
+                  away. Visit popular attractions such as Destiny USA Syracuse University and the Carrier Dome or take
+                  the whole family for a meal to remember at Dinosaur Barbeque. Our welcoming staff will make you feel
+                  at home from the moment you arrive. Indulge in a full hot breakfast every morning and complimentary
+                  evening social and drinks* Monday - Thursday. Our spacious studio and one or two bedroom suites
+                  feature all the comforts of home including a fully equipped kitchenette 42-inch TV work space and
+                  complimentary WiFi. Keep up your fitness routine with a workout in the large fitness center or relax
+                  with a swim in the indoor heated pool. Business travelers will appreciate our flexible meeting room
+                  which can accommodate events with up to 75 guests. *Subject to state and local laws. Must be of legal
+                  drinking age. .</p>
+
+              </div>
             </div>
 
+            <div class="row bg-primary" style="border-radius: 10px;">
+              <div class="col-md-3 text-white mt-3">
+                <p>Ngày nhận phòng</p>
+                <h5>Thứ 3,28/12/2021</h5>
+                <hr class="text-white">
+              </div>
+              <div class="col-md-3 text-white mt-3">
+                <p>Ngày trả phòng</p>
+                <h5>Thứ 7,30/12/2021</h5>
+                <hr class="text-white">
+              </div>
+              <div class="col-md-3 text-white mt-3">
+                <p>Số người</p>
+                <h5>3-6 người</h5>
+                <hr class="text-white">
+              </div>
+              <div class="col-md-3">
+                <button class="btn btn-warning text-white btntimkiem">Thay đổi tìm kiếm</button>
+              </div>
+            </div>
+
+
+
+          </h9>
         </div>
       </div>
     </div>
     </div>
   </main>
+  <div class="box-chu">
 
+
+
+  </div>
   <div class="footer container-sm">
     <div class="footer_container mt-4">
       <h4>Những chỗ nghỉ phổ biến và tương tự với khách sạn HAMPTON INN UTICA</h4>
@@ -139,7 +219,8 @@
                     <b class="card_titler">HOTEL DES ARTS SAIGON</b>
                     <form action="">
                       <i class="fas fa-map-marker-alt"></i>
-                      <a href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
+                      <a
+                        href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
                         N Genesee St, Utica, NY 13502, Hoa Kỳ</a>
                     </form>
                     <h7 class="card-text">Giá mỗi đêm</h7>
@@ -154,7 +235,8 @@
                     <b class="card_titler">SILVERLAND JOLIE HOTEL AND SPA</b>
                     <form action="">
                       <i class="fas fa-map-marker-alt"></i>
-                      <a href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
+                      <a
+                        href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
                         N Genesee St, Utica, NY 13502, Hoa Kỳ</a>
                     </form>
                     <h7 class="card-text">Giá mỗi đêm</h7>
@@ -169,7 +251,8 @@
                     <b class="card_titler">WINDSOR PLAZA HOTEL CON</b>
                     <form action="">
                       <i class="fas fa-map-marker-alt"></i>
-                      <a href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
+                      <a
+                        href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
                         N Genesee St, Utica, NY 13502, Hoa Kỳ</a>
                     </form>
                     <h7 class="card-text">Giá mỗi đêm</h7>
@@ -184,7 +267,8 @@
                     <b class="card_titler">SHERWOOD RESIDENCE</b>
                     <form action="">
                       <i class="fas fa-map-marker-alt"></i>
-                      <a href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
+                      <a
+                        href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
                         N Genesee St, Utica, NY 13502, Hoa Kỳ</a>
                     </form>
                     <h7 class="card-text">Giá mỗi đêm</h7>
@@ -203,7 +287,8 @@
                     <b class="card_titler">HAMPTON INN UTICA NY</b>
                     <form action="">
                       <i class="fas fa-map-marker-alt"></i>
-                      <a href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
+                      <a
+                        href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
                         N Genesee St, Utica, NY 13502, Hoa Kỳ</a>
                     </form>
                     <h7 class="card-text">Giá mỗi đêm</h7>
@@ -218,7 +303,8 @@
                     <b class="card_titler">EXTENDED STAY AMERICA SYRACUSE</b>
                     <form action="">
                       <i class="fas fa-map-marker-alt"></i>
-                      <a href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
+                      <a
+                        href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
                         N Genesee St, Utica, NY 13502, Hoa Kỳ</a>
                     </form>
                     <h7 class="card-text">Giá mỗi đêm</h7>
@@ -233,7 +319,8 @@
                     <b class="card_titler">FAIRFIELD INN N STES MARRIOTT</b>
                     <form action="">
                       <i class="fas fa-map-marker-alt"></i>
-                      <a href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
+                      <a
+                        href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
                         N Genesee St, Utica, NY 13502, Hoa Kỳ</a>
                     </form>
                     <h7 class="card-text">Giá mỗi đêm</h7>
@@ -248,7 +335,8 @@
                     <b class="card_titler">SOFITEL SAIGON PLAZA</b>
                     <form action="">
                       <i class="fas fa-map-marker-alt"></i>
-                      <a href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
+                      <a
+                        href="https://www.google.com/maps/place/172-180+N+Genesee+St,+Utica,+NY+13502,+Hoa+K%E1%BB%B3/@43.10939,-75.2193966,17z/data=!3m1!4b1!4m5!3m4!1s0x89d94713de3c298d:0x4bf524ca0cc367ca!8m2!3d43.1093114!4d-75.2170935">172-180
                         N Genesee St, Utica, NY 13502, Hoa Kỳ</a>
                     </form>
                     <h7 class="card-text">Giá mỗi đêm</h7>
@@ -259,11 +347,13 @@
             </div>
 
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
