--- a/hotel_detail.html
+++ b/hotel_detail.html
@@ -102,15 +102,25 @@
         </div>
         <div class="right col-sm-9 mt-9">
           <h1>HAMPTON INN UTICA</h1>
-          <h9 style="color: #0066ff;">172 - 180 North Genesee Str. Utica NY 13502. US.</h6>
+          <h9 style="color: #3d91d6;">172 - 180 North Genesee Str. Utica NY 13502. US.</h6>
             <button>
               xem trên bản đồ
             </button>
             <div class="button_right">
-              <button>Tổng quan</button>
-              <button>Thông tin phòng và giá</button>
-              <button>tiện nghi</button>
-              <button>Quy tắc chung</button>
+              <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                  <a class="nav-link text-primary border border-primary "  href="#">Tổng quan</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark border border-dark "  href="#">Thông tin phòng và giá</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark border border-dark" href="">Tiện nghi</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark border border-dark"href="#">Quy tắc chung</a>
+                </li>
+              </ul>
             </div>
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
